--- a/aboutArb.html
+++ b/aboutArb.html
@@ -53,7 +53,7 @@
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand swing" href="index.html">
-                    <img style="width: 120px; height: 60px; margin-top: -14px;box-shadow:  1px 1px 5px #fca901" src="images/logo/logo.nav.jpg" alt="image"></a>
+                    <img style="width: 120px; height: 60px; margin-top: -14px" src="images/logo/logo.nav.jpg" alt="image"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
