--- a/index.arabic.html
+++ b/index.arabic.html
@@ -877,13 +877,14 @@
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C46DX7DZB4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K6W5EL10SN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-C46DX7DZB4');
+  gtag('config', 'G-K6W5EL10SN');
+</script>
 </script>
 </body>
 </html>
